--- a/app/src/main/res/layout/users_fragment.xml
+++ b/app/src/main/res/layout/users_fragment.xml
@@ -1,8 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_user_search_results"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/normal_margin"
+        app:cardCornerRadius="@dimen/card_padding"
+        app:contentPadding="@dimen/small_margin"
+        app:cardElevation="@dimen/card_elevation"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/pb_load_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
+
+        <RelativeLayout
+            android:id="@+id/rl_user_search_results_wrapper"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/iv_user_image"
+                android:src="@drawable/user_avatar"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"/>
+
+            <TextView
+                android:id="@+id/tv_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_toRightOf="@id/iv_user_image"
+                android:layout_marginLeft="@dimen/normal_margin"
+                android:layout_marginBottom="@dimen/small_margin"/>
+
+            <TextView
+                android:id="@+id/tv_user_rank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_position"
+                android:drawablePadding="@dimen/small_margin"
+                android:layout_toRightOf="@id/iv_user_image"
+                android:layout_marginLeft="@dimen/normal_margin"
+                android:layout_marginBottom="@dimen/small_margin"
+                android:layout_below="@id/tv_user_name"/>
+
+            <TextView
+                android:id="@+id/tv_best_language"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_language"
+                android:drawablePadding="@dimen/small_margin"
+                android:layout_toRightOf="@id/iv_user_image"
+                android:layout_marginLeft="@dimen/normal_margin"
+                android:layout_below="@id/tv_user_rank"/>
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_recent_searches"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</RelativeLayout>
