--- a/app/src/main/res/layout/users_fragment.xml
+++ b/app/src/main/res/layout/users_fragment.xml
@@ -69,10 +69,30 @@
 
     </android.support.v7.widget.CardView>
 
+    <TextView
+        android:id="@+id/tv_recent_user_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/recent_user_title"
+        android:layout_below="@id/cv_user_search_results"
+        android:layout_margin="@dimen/normal_margin"
+        android:textSize="20sp"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_recent_searches"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_recent_user_title"/>
+
+    <TextView
+        android:id="@+id/tv_no_users_found"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:layout_below="@id/tv_recent_user_title"
+        android:text="@string/no_users_found"
+        android:visibility="gone"/>
 
 </RelativeLayout>
