--- a/app/src/main/res/layout/challenge_list_item.xml
+++ b/app/src/main/res/layout/challenge_list_item.xml
@@ -14,9 +14,11 @@
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/tv_challenge_complete_date"
+        android:id="@+id/tv_subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="3"
+        android:ellipsize="end"
         android:layout_marginTop="@dimen/small_margin"/>
 
     <android.support.design.chip.ChipGroup
