--- a/app/src/main/res/layout/challenges_list_fragment.xml
+++ b/app/src/main/res/layout/challenges_list_fragment.xml
@@ -11,6 +11,13 @@
         android:layout_centerInParent="true"
         android:indeterminate="true"/>
 
+    <TextView
+        android:id="@+id/tv_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_challenges"
         android:layout_width="match_parent"
