--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Challenge.Details.Item" parent="">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/normal_margin</item>
+        <item name="contentPaddingTop">@dimen/small_margin</item>
+        <item name="contentPaddingLeft">@dimen/normal_margin</item>
+        <item name="contentPaddingRight">@dimen/normal_margin</item>
+        <item name="contentPaddingBottom">@dimen/normal_margin</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
 </resources>
